# permsearch

./: .editorconfig  Cargo.toml  LICENSE  README.md
.github/workflows/: release-artifact.yml
src/: cli.rs  input_parser.rs  lib.rs  main.rs  util.rs
