[package]
name = "permsearch"
version = "1.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/twihno/permsearch"
authors = ["Thomas Schuster <twihno@gmail.com>"]
readme = "README.md"
keywords = ["cli", "linux", "permissions", "tool"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/permsearch"
description = "Simple search for finding mistakes in filesystem owner and permission settings"
exclude = [".github/*", ".editorconfig"]


[lints.rust]
unsafe_code = { level = "forbid", priority = 0 }

[lints.clippy]
pedantic = "warn"

[profile.release]
lto = "fat"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.47", features = [
  "derive",
  "suggestions",
  "std",
  "help",
  "error-context",
  "color",
  "usage",
] }
regex = "1.11.2"
